compiler/grammar/yaplParser.py
# Generated from compiler/grammar/yapl.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class yaplParser ( Parser ):

    grammarFileName = "yapl.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "','", "':'", "'.'", "';'", "'('", "')'", 
                     "'{'", "'}'", "'~'", "'@'", "'+'", "'-'", "'*'", "'/'", 
                     "'<'", "'<='", "'>'", "'>='", "'='", "'=>'", "'<-'", 
                     "'ERROR'" ]

    symbolicNames = [ "<INVALID>", "CLASS", "LET", "WHILE", "THEN", "LOOP", 
                      "POOL", "IF", "FI", "ELSE", "IN", "INHERITS", "ISVOID", 
                      "NEW", "NOT", "WS", "NEWLINE", "COMMA", "COLON", "PERIOD", 
                      "SEMICOLON", "LPAREN", "RPAREN", "LBRACE", "RBRACE", 
                      "NEGATIVE", "AT", "PLUS", "MINUS", "MULT", "DIV", 
                      "LESS_THAN", "LESS_EQUAL", "GREATER_THAN", "GREATER_EQUAL", 
                      "EQUAL", "FAT_ARROW", "ASSIGN", "ERROR", "COMMENT_BLOCK", 
                      "COMMENT_LINE", "INT_VAR", "BOOL_VAR", "ID_VAR", "TYPE_IDENTIFIER", 
                      "STR_VAR" ]

    RULE_program = 0
    RULE_formal = 1
    RULE_varTypescript = 2
    RULE_classDefinition = 3
    RULE_featureDefinition = 4
    RULE_methodDefinition = 5
    RULE_attributeDefinition = 6
    RULE_expr = 7

    ruleNames =  [ "program", "formal", "varTypescript", "classDefinition", 
                   "featureDefinition", "methodDefinition", "attributeDefinition", 
                   "expr" ]

    EOF = Token.EOF
    CLASS=1
    LET=2
    WHILE=3
    THEN=4
    LOOP=5
    POOL=6
    IF=7
    FI=8
    ELSE=9
    IN=10
    INHERITS=11
    ISVOID=12
    NEW=13
    NOT=14
    WS=15
    NEWLINE=16
    COMMA=17
    COLON=18
    PERIOD=19
    SEMICOLON=20
    LPAREN=21
    RPAREN=22
    LBRACE=23
    RBRACE=24
    NEGATIVE=25
    AT=26
    PLUS=27
    MINUS=28
    MULT=29
    DIV=30
    LESS_THAN=31
    LESS_EQUAL=32
    GREATER_THAN=33
    GREATER_EQUAL=34
    EQUAL=35
    FAT_ARROW=36
    ASSIGN=37
    ERROR=38
    COMMENT_BLOCK=39
    COMMENT_LINE=40
    INT_VAR=41
    BOOL_VAR=42
    ID_VAR=43
    TYPE_IDENTIFIER=44
    STR_VAR=45

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classDefinition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(yaplParser.ClassDefinitionContext)
            else:
                return self.getTypedRuleContext(yaplParser.ClassDefinitionContext,i)


        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(yaplParser.SEMICOLON)
            else:
                return self.getToken(yaplParser.SEMICOLON, i)

        def getRuleIndex(self):
            return yaplParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = yaplParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 19 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 16
                self.classDefinition()
                self.state = 17
                self.match(yaplParser.SEMICOLON)
                self.state = 21 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==1):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FormalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID_VAR(self):
            return self.getToken(yaplParser.ID_VAR, 0)

        def COLON(self):
            return self.getToken(yaplParser.COLON, 0)

        def TYPE_IDENTIFIER(self):
            return self.getToken(yaplParser.TYPE_IDENTIFIER, 0)

        def getRuleIndex(self):
            return yaplParser.RULE_formal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFormal" ):
                listener.enterFormal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFormal" ):
                listener.exitFormal(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFormal" ):
                return visitor.visitFormal(self)
            else:
                return visitor.visitChildren(self)




    def formal(self):

        localctx = yaplParser.FormalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_formal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 23
            self.match(yaplParser.ID_VAR)
            self.state = 24
            self.match(yaplParser.COLON)
            self.state = 25
            self.match(yaplParser.TYPE_IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarTypescriptContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return yaplParser.RULE_varTypescript

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class AttributeDeclarationContext(VarTypescriptContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a yaplParser.VarTypescriptContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID_VAR(self):
            return self.getToken(yaplParser.ID_VAR, 0)
        def COLON(self):
            return self.getToken(yaplParser.COLON, 0)
        def TYPE_IDENTIFIER(self):
            return self.getToken(yaplParser.TYPE_IDENTIFIER, 0)
        def ASSIGN(self):
            return self.getToken(yaplParser.ASSIGN, 0)
        def expr(self):
            return self.getTypedRuleContext(yaplParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttributeDeclaration" ):
                listener.enterAttributeDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttributeDeclaration" ):
                listener.exitAttributeDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttributeDeclaration" ):
                return visitor.visitAttributeDeclaration(self)
            else:
                return visitor.visitChildren(self)



    def varTypescript(self):

        localctx = yaplParser.VarTypescriptContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_varTypescript)
        self._la = 0 # Token type
        try:
            localctx = yaplParser.AttributeDeclarationContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 27
            self.match(yaplParser.ID_VAR)
            self.state = 28
            self.match(yaplParser.COLON)
            self.state = 29
            self.match(yaplParser.TYPE_IDENTIFIER)
            self.state = 32
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==37:
                self.state = 30
                self.match(yaplParser.ASSIGN)
                self.state = 31
                self.expr(0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(yaplParser.CLASS, 0)

        def TYPE_IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(yaplParser.TYPE_IDENTIFIER)
            else:
                return self.getToken(yaplParser.TYPE_IDENTIFIER, i)

        def LBRACE(self):
            return self.getToken(yaplParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(yaplParser.RBRACE, 0)

        def INHERITS(self):
            return self.getToken(yaplParser.INHERITS, 0)

        def featureDefinition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(yaplParser.FeatureDefinitionContext)
            else:
                return self.getTypedRuleContext(yaplParser.FeatureDefinitionContext,i)


        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(yaplParser.SEMICOLON)
            else:
                return self.getToken(yaplParser.SEMICOLON, i)

        def getRuleIndex(self):
            return yaplParser.RULE_classDefinition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassDefinition" ):
                listener.enterClassDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassDefinition" ):
                listener.exitClassDefinition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassDefinition" ):
                return visitor.visitClassDefinition(self)
            else:
                return visitor.visitChildren(self)




    def classDefinition(self):

        localctx = yaplParser.ClassDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_classDefinition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self.match(yaplParser.CLASS)
            self.state = 35
            self.match(yaplParser.TYPE_IDENTIFIER)
            self.state = 38
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==11:
                self.state = 36
                self.match(yaplParser.INHERITS)
                self.state = 37
                self.match(yaplParser.TYPE_IDENTIFIER)


            self.state = 40
            self.match(yaplParser.LBRACE)
            self.state = 46
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==43:
                self.state = 41
                self.featureDefinition()
                self.state = 42
                self.match(yaplParser.SEMICOLON)
                self.state = 48
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 49
            self.match(yaplParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FeatureDefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def methodDefinition(self):
            return self.getTypedRuleContext(yaplParser.MethodDefinitionContext,0)


        def attributeDefinition(self):
            return self.getTypedRuleContext(yaplParser.AttributeDefinitionContext,0)


        def getRuleIndex(self):
            return yaplParser.RULE_featureDefinition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFeatureDefinition" ):
                listener.enterFeatureDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFeatureDefinition" ):
                listener.exitFeatureDefinition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFeatureDefinition" ):
                return visitor.visitFeatureDefinition(self)
            else:
                return visitor.visitChildren(self)




    def featureDefinition(self):

        localctx = yaplParser.FeatureDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_featureDefinition)
        try:
            self.state = 53
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 51
                self.methodDefinition()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 52
                self.attributeDefinition()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodDefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return yaplParser.RULE_methodDefinition

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class MethodDefContext(MethodDefinitionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a yaplParser.MethodDefinitionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID_VAR(self):
            return self.getToken(yaplParser.ID_VAR, 0)
        def LPAREN(self):
            return self.getToken(yaplParser.LPAREN, 0)
        def RPAREN(self):
            return self.getToken(yaplParser.RPAREN, 0)
        def COLON(self):
            return self.getToken(yaplParser.COLON, 0)
        def TYPE_IDENTIFIER(self):
            return self.getToken(yaplParser.TYPE_IDENTIFIER, 0)
        def LBRACE(self):
            return self.getToken(yaplParser.LBRACE, 0)
        def expr(self):
            return self.getTypedRuleContext(yaplParser.ExprContext,0)

        def RBRACE(self):
            return self.getToken(yaplParser.RBRACE, 0)
        def formal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(yaplParser.FormalContext)
            else:
                return self.getTypedRuleContext(yaplParser.FormalContext,i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(yaplParser.COMMA)
            else:
                return self.getToken(yaplParser.COMMA, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodDef" ):
                listener.enterMethodDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodDef" ):
                listener.exitMethodDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethodDef" ):
                return visitor.visitMethodDef(self)
            else:
                return visitor.visitChildren(self)



    def methodDefinition(self):

        localctx = yaplParser.MethodDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_methodDefinition)
        self._la = 0 # Token type
        try:
            localctx = yaplParser.MethodDefContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self.match(yaplParser.ID_VAR)
            self.state = 56
            self.match(yaplParser.LPAREN)
            self.state = 67
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==43:
                self.state = 57
                self.formal()
                self.state = 62
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==17:
                    self.state = 58
                    self.match(yaplParser.COMMA)
                    self.state = 59
                    self.formal()
                    self.state = 64
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 69
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 70
            self.match(yaplParser.RPAREN)
            self.state = 71
            self.match(yaplParser.COLON)
            self.state = 72
            self.match(yaplParser.TYPE_IDENTIFIER)
            self.state = 73
            self.match(yaplParser.LBRACE)
            self.state = 74
            self.expr(0)
            self.state = 75
            self.match(yaplParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributeDefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return yaplParser.RULE_attributeDefinition

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class AttrContext(AttributeDefinitionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a yaplParser.AttributeDefinitionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID_VAR(self):
            return self.getToken(yaplParser.ID_VAR, 0)
        def COLON(self):
            return self.getToken(yaplParser.COLON, 0)
        def TYPE_IDENTIFIER(self):
            return self.getToken(yaplParser.TYPE_IDENTIFIER, 0)
        def ASSIGN(self):
            return self.getToken(yaplParser.ASSIGN, 0)
        def expr(self):
            return self.getTypedRuleContext(yaplParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttr" ):
                listener.enterAttr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttr" ):
                listener.exitAttr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttr" ):
                return visitor.visitAttr(self)
            else:
                return visitor.visitChildren(self)



    def attributeDefinition(self):

        localctx = yaplParser.AttributeDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_attributeDefinition)
        self._la = 0 # Token type
        try:
            localctx = yaplParser.AttrContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(yaplParser.ID_VAR)
            self.state = 78
            self.match(yaplParser.COLON)
            self.state = 79
            self.match(yaplParser.TYPE_IDENTIFIER)
            self.state = 82
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==37:
                self.state = 80
                self.match(yaplParser.ASSIGN)
                self.state = 81
                self.expr(0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID_VAR(self):
            return self.getToken(yaplParser.ID_VAR, 0)

        def LPAREN(self):
            return self.getToken(yaplParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(yaplParser.RPAREN, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(yaplParser.ExprContext)
            else:
                return self.getTypedRuleContext(yaplParser.ExprContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(yaplParser.COMMA)
            else:
                return self.getToken(yaplParser.COMMA, i)

        def IF(self):
            return self.getToken(yaplParser.IF, 0)

        def THEN(self):
            return self.getToken(yaplParser.THEN, 0)

        def ELSE(self):
            return self.getToken(yaplParser.ELSE, 0)

        def FI(self):
            return self.getToken(yaplParser.FI, 0)

        def WHILE(self):
            return self.getToken(yaplParser.WHILE, 0)

        def LOOP(self):
            return self.getToken(yaplParser.LOOP, 0)

        def POOL(self):
            return self.getToken(yaplParser.POOL, 0)

        def LBRACE(self):
            return self.getToken(yaplParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(yaplParser.RBRACE, 0)

        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(yaplParser.SEMICOLON)
            else:
                return self.getToken(yaplParser.SEMICOLON, i)

        def LET(self):
            return self.getToken(yaplParser.LET, 0)

        def varTypescript(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(yaplParser.VarTypescriptContext)
            else:
                return self.getTypedRuleContext(yaplParser.VarTypescriptContext,i)


        def IN(self):
            return self.getToken(yaplParser.IN, 0)

        def NEW(self):
            return self.getToken(yaplParser.NEW, 0)

        def TYPE_IDENTIFIER(self):
            return self.getToken(yaplParser.TYPE_IDENTIFIER, 0)

        def NEGATIVE(self):
            return self.getToken(yaplParser.NEGATIVE, 0)

        def ISVOID(self):
            return self.getToken(yaplParser.ISVOID, 0)

        def NOT(self):
            return self.getToken(yaplParser.NOT, 0)

        def INT_VAR(self):
            return self.getToken(yaplParser.INT_VAR, 0)

        def STR_VAR(self):
            return self.getToken(yaplParser.STR_VAR, 0)

        def BOOL_VAR(self):
            return self.getToken(yaplParser.BOOL_VAR, 0)

        def ASSIGN(self):
            return self.getToken(yaplParser.ASSIGN, 0)

        def MULT(self):
            return self.getToken(yaplParser.MULT, 0)

        def DIV(self):
            return self.getToken(yaplParser.DIV, 0)

        def PLUS(self):
            return self.getToken(yaplParser.PLUS, 0)

        def MINUS(self):
            return self.getToken(yaplParser.MINUS, 0)

        def LESS_EQUAL(self):
            return self.getToken(yaplParser.LESS_EQUAL, 0)

        def LESS_THAN(self):
            return self.getToken(yaplParser.LESS_THAN, 0)

        def EQUAL(self):
            return self.getToken(yaplParser.EQUAL, 0)

        def PERIOD(self):
            return self.getToken(yaplParser.PERIOD, 0)

        def AT(self):
            return self.getToken(yaplParser.AT, 0)

        def getRuleIndex(self):
            return yaplParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = yaplParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 14
        self.enterRecursionRule(localctx, 14, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.state = 85
                self.match(yaplParser.ID_VAR)
                self.state = 86
                self.match(yaplParser.LPAREN)
                self.state = 97
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 50577578946700) != 0):
                    self.state = 87
                    self.expr(0)
                    self.state = 92
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==17:
                        self.state = 88
                        self.match(yaplParser.COMMA)
                        self.state = 89
                        self.expr(0)
                        self.state = 94
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

                    self.state = 99
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 100
                self.match(yaplParser.RPAREN)
                pass

            elif la_ == 2:
                self.state = 101
                self.match(yaplParser.IF)
                self.state = 102
                self.expr(0)
                self.state = 103
                self.match(yaplParser.THEN)
                self.state = 104
                self.expr(0)
                self.state = 105
                self.match(yaplParser.ELSE)
                self.state = 106
                self.expr(0)
                self.state = 107
                self.match(yaplParser.FI)
                pass

            elif la_ == 3:
                self.state = 109
                self.match(yaplParser.WHILE)
                self.state = 110
                self.expr(0)
                self.state = 111
                self.match(yaplParser.LOOP)
                self.state = 112
                self.expr(0)
                self.state = 113
                self.match(yaplParser.POOL)
                pass

            elif la_ == 4:
                self.state = 115
                self.match(yaplParser.LBRACE)
                self.state = 119 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 116
                    self.expr(0)
                    self.state = 117
                    self.match(yaplParser.SEMICOLON)
                    self.state = 121 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 50577578946700) != 0)):
                        break

                self.state = 123
                self.match(yaplParser.RBRACE)
                pass

            elif la_ == 5:
                self.state = 125
                self.match(yaplParser.LET)
                self.state = 126
                self.varTypescript()
                self.state = 131
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==17:
                    self.state = 127
                    self.match(yaplParser.COMMA)
                    self.state = 128
                    self.varTypescript()
                    self.state = 133
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 134
                self.match(yaplParser.IN)
                self.state = 135
                self.expr(18)
                pass

            elif la_ == 6:
                self.state = 137
                self.match(yaplParser.NEW)
                self.state = 138
                self.match(yaplParser.TYPE_IDENTIFIER)
                pass

            elif la_ == 7:
                self.state = 139
                self.match(yaplParser.NEGATIVE)
                self.state = 140
                self.expr(16)
                pass

            elif la_ == 8:
                self.state = 141
                self.match(yaplParser.ISVOID)
                self.state = 142
                self.expr(15)
                pass

            elif la_ == 9:
                self.state = 143
                self.match(yaplParser.NOT)
                self.state = 144
                self.expr(7)
                pass

            elif la_ == 10:
                self.state = 145
                self.match(yaplParser.LPAREN)
                self.state = 146
                self.expr(0)
                self.state = 147
                self.match(yaplParser.RPAREN)
                pass

            elif la_ == 11:
                self.state = 149
                self.match(yaplParser.ID_VAR)
                pass

            elif la_ == 12:
                self.state = 150
                self.match(yaplParser.INT_VAR)
                pass

            elif la_ == 13:
                self.state = 151
                self.match(yaplParser.STR_VAR)
                pass

            elif la_ == 14:
                self.state = 152
                self.match(yaplParser.BOOL_VAR)
                pass

            elif la_ == 15:
                self.state = 153
                self.match(yaplParser.ID_VAR)
                self.state = 154
                self.match(yaplParser.ASSIGN)
                self.state = 155
                self.expr(1)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 203
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,17,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 201
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,16,self._ctx)
                    if la_ == 1:
                        localctx = yaplParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 158
                        if not self.precpred(self._ctx, 14):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 14)")
                        self.state = 159
                        self.match(yaplParser.MULT)
                        self.state = 160
                        self.expr(15)
                        pass

                    elif la_ == 2:
                        localctx = yaplParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 161
                        if not self.precpred(self._ctx, 13):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 13)")
                        self.state = 162
                        self.match(yaplParser.DIV)
                        self.state = 163
                        self.expr(14)
                        pass

                    elif la_ == 3:
                        localctx = yaplParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 164
                        if not self.precpred(self._ctx, 12):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 12)")
                        self.state = 165
                        self.match(yaplParser.PLUS)
                        self.state = 166
                        self.expr(13)
                        pass

                    elif la_ == 4:
                        localctx = yaplParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 167
                        if not self.precpred(self._ctx, 11):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 11)")
                        self.state = 168
                        self.match(yaplParser.MINUS)
                        self.state = 169
                        self.expr(12)
                        pass

                    elif la_ == 5:
                        localctx = yaplParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 170
                        if not self.precpred(self._ctx, 10):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 10)")
                        self.state = 171
                        self.match(yaplParser.LESS_EQUAL)
                        self.state = 172
                        self.expr(11)
                        pass

                    elif la_ == 6:
                        localctx = yaplParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 173
                        if not self.precpred(self._ctx, 9):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 9)")
                        self.state = 174
                        self.match(yaplParser.LESS_THAN)
                        self.state = 175
                        self.expr(10)
                        pass
